// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Checkbox Disabilitate 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <form
      className=""
    >
      <div
        className="   form-check"
      >
        <input
          className="form-check-input"
          disabled={true}
          id="checkbox1"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className="form-check-label "
          htmlFor="checkbox1"
        >
          Checkbox disabilitato non selezionato
        </label>
      </div>
      <div
        className="   form-check"
      >
        <input
          className="form-check-input"
          defaultChecked={true}
          disabled={true}
          id="checkbox2"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className="form-check-label "
          htmlFor="checkbox2"
        >
          Checkbox disabilitato selezionato
        </label>
      </div>
    </form>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Disabilitate.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Checkbox Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <form
      className=""
    >
      <div
        className="   form-check"
      >
        <input
          className="form-check-input"
          id="checkbox1"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className="form-check-label "
          htmlFor="checkbox1"
        >
          Label di esempio
        </label>
      </div>
      <div
        className="   form-check"
      >
        <input
          className="form-check-input"
          defaultChecked={true}
          id="radio1"
          name="gruppo1"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
        />
        <label
          className="form-check-label "
          htmlFor="radio1"
        >
          Opzione 1
        </label>
      </div>
      <div
        className="   form-check"
      >
        <input
          className="form-check-input"
          id="radio2"
          name="gruppo1"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
        />
        <label
          className="form-check-label "
          htmlFor="radio2"
        >
          Opzione 2
        </label>
      </div>
    </form>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Esempi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Checkbox Esempi interattivi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <form
      className=""
    >
      <div
        className="   form-check"
      >
        <input
          checked={true}
          className="form-check-input"
          disabled={false}
          id="checkbox1"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className="form-check-label "
          htmlFor="checkbox1"
        >
          Checkbox
           
          Selezionato
           
          
           
          
        </label>
      </div>
      <div
        className="   form-check"
      >
        <input
          checked={false}
          className="form-check-input"
          disabled={false}
          id="checkbox1"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className="form-check-label "
          htmlFor="checkbox1"
        >
          Checkbox
           inverso 
          
           
          
           
          
        </label>
      </div>
    </form>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "EsempiInterattivi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Checkbox Gruppi di Checkbox 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      className="m-5 row"
    >
      <div
        className="col-md-5"
      >
        <form
          className=""
        >
          <div
            className="form-check-group   form-check"
          >
            <input
              className="form-check-input"
              defaultChecked={true}
              id="checkbox1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label "
              htmlFor="checkbox1"
            >
              Checkbox selezionato
            </label>
          </div>
          <div
            className="form-check-group   form-check"
          >
            <input
              className="form-check-input"
              id="checkbox2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label "
              htmlFor="checkbox2"
            >
              Checkbox non selezionato
            </label>
          </div>
          <div
            className="form-check-group   form-check"
          >
            <input
              className="form-check-input"
              disabled={true}
              id="checkbox3"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label "
              htmlFor="checkbox3"
            >
              Checkbox disabilitato non selezionato
            </label>
          </div>
        </form>
      </div>
      <div
        className="col-md-2"
      />
      <div
        className="col-md-5"
      >
        <form
          className=""
        >
          <div
            className="form-check-group   form-check"
          >
            <input
              className="form-check-input"
              defaultChecked={true}
              id="checkbox4"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label "
              htmlFor="checkbox4"
            >
              Checkbox selezionato
            </label>
            <small
              className="form-text text-muted"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
            </small>
          </div>
          <div
            className="form-check-group   form-check"
          >
            <input
              className="form-check-input"
              id="checkbox5"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label "
              htmlFor="checkbox5"
            >
              Checkbox non selezionato
            </label>
            <small
              className="form-text text-muted"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
            </small>
          </div>
          <div
            className="form-check-group   form-check"
          >
            <input
              className="form-check-input"
              disabled={true}
              id="checkbox6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label "
              htmlFor="checkbox6"
            >
              Checkbox disabilitato non selezionato
            </label>
            <small
              className="form-text text-muted"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
            </small>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Gruppi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Checkbox Inline 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <form
      className=""
    >
      <div
        className="   form-check form-check-inline"
      >
        <input
          className="form-check-input"
          id="checkbox1"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className="form-check-label "
          htmlFor="checkbox1"
        >
          Checkbox non selezionato
        </label>
      </div>
      <div
        className="   form-check form-check-inline"
      >
        <input
          className="form-check-input"
          defaultChecked={true}
          id="checkbox2"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className="form-check-label "
          htmlFor="checkbox2"
        >
          Checkbox selezionato
        </label>
      </div>
    </form>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Inline.md",
      }
    }
  />
</div>
`;
